--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -3,16 +3,21 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    background-color: rgb(213, 243, 243);
+    position: sticky;
+    top: 0;
+    z-index: 10;
+    background-color: rgb(243,243,245);
 }
 
 .header > h1 {
     font-size: 3rem;
+    font-weight: 300;
+    letter-spacing: 3px;
 }
 
 .header > nav {
     display: flex;
-    gap: 1rem;
+    gap: 1.5rem;
     font-size: 1.25rem;
 }
 
@@ -20,3 +25,12 @@ nav > a {
     text-decoration: none;
     color: inherit;
 }
+
+.material-symbols-outlined {
+  font-variation-settings:
+  'FILL' 0,
+  'wght' 400,
+  'GRAD' 0,
+  'opsz' 48;
+}
+
