--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -1,11 +1,10 @@
 .footer {
     padding: 1.5rem 0;
     width: 100%;
+    bottom: 0;
+    position: absolute;
     text-align: center;
     background-color: rgb(224, 227, 229);
-    transition-duration: .5s;
-    position: fixed;
-    bottom: 0;
   }
   
 .footer > a {
