--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -18,6 +18,7 @@
     width: 100%;
     object-fit: cover;
     min-height: 720px;
+    z-index: 1;
 }
 
 .section2 {
@@ -29,9 +30,21 @@
     gap: 4rem;
 }
 
+.section2::before {
+    content: "";
+    position: absolute;
+    background-image: url('../images/background.jpeg');
+    opacity: 0.5;
+    top: 0px;
+    right: 0px;
+    bottom: 0px;
+    left: 0px;
+}
+
 .section2 > h1 {
     font-weight: 200;
     letter-spacing: 2.5px;
+    position: relative;
 }
 
 .section2 .featured-items {
@@ -71,7 +84,7 @@
     flex-direction: column;
     gap: 2rem;
     max-width: 42rem;
-    z-index: 1;
+    z-index: 2;
     padding-right: 5rem;
 }
 
