--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -1,15 +1,14 @@
 .footer {
-    padding: 1.5rem 0;
-    width: 100%;
-    text-align: center;
-    background-color: rgb(224, 227, 229);
-    position: absolute;
-    bottom: 0;
+  padding: 1.5rem 0;
+  width: 100%;
+  text-align: center;
+  background-color: rgb(224, 227, 229);
+  z-index: 1;
   }
   
 .footer > a {
-    color: black;
-    text-decoration: none;
-    font-weight: 100;
-    font-size: 1.25rem;
+  color: black;
+  text-decoration: none;
+  font-weight: 100;
+  font-size: 1.25rem;
 }
