--- a/src/styles/cart-page.css
+++ b/src/styles/cart-page.css
@@ -1,3 +1,44 @@
-.cart-page {
+.nonempty-cart-page,
+.empty-cart-page {
     flex-grow: 1;
+}
+
+/* Empty Cart */
+
+.empty-cart-page {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.empty-cart-page > div {
+    height: 500px;
+    width: 500px;
+    background-color: rgb(239, 239, 239);
+}
+
+.empty-box {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 2rem;
+    box-shadow: 0 0 30px 10px rgb(206, 206, 206);
+}
+
+.empty-box > button {
+    height: 3rem;
+    width: 15rem;
+    font-size: 1.75rem;
+    background: rgb(255, 151, 54);
+	border: none;
+	cursor: pointer;
+    transition: .5s;
+    color: white;
+    opacity: 0.7;
+}
+
+.empty-box > button:hover {
+    opacity: 1;
+    transition: .5s;
 }
