--- a/src/styles/shop.css
+++ b/src/styles/shop.css
@@ -15,6 +15,13 @@ img {
     background-color: white;
     cursor: pointer;
     position: relative;
+    transition: .5s;
+}
+
+.category:hover {
+    background-color: black;
+    color: white;
+    transition: .5s;
 }
 
 .catalog {
@@ -40,22 +47,23 @@ h3 {
     flex-direction: column;
     width: 300px;
     align-items: center;
-    gap: .5rem;
+    justify-content: center;
+    transform: scale(1.05);
+    transition: 0.5s;
+}
+
+.item:hover {
+    transform: scale(1);
+    transition: .5s;
 }
 
 .item-image {
-    background-color: rgb(231, 231, 232);
+    background-color: rgb(239, 239, 239);
     transition: .5s;
     cursor: pointer;
     height: 300px;
     width: 300px;
-    transform: scale(1.05);
-    box-shadow: 0 0 30px 5px rgb(206, 206, 206);
-}
-
-.item-image:hover {
-    transform: scale(1);
-    transition: .5s;
+    /* box-shadow: 0 0 15px 5px rgb(206, 206, 206); */
 }
 
 .item-info > h3{
@@ -63,5 +71,12 @@ h3 {
 }
 
 .item-info {
-    padding-top: 1rem;
+    padding: 1rem;
+    width: 300px;
+    text-align: center;
+}
+
+.item-image:hover {
+    transform: scale(1);
+    transition: .5s;
 }
