--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -12,3 +12,24 @@
   font-weight: 100;
   font-size: 1.25rem;
 }
+
+.footer > a {
+    position: relative;
+}
+
+.footer > a::after {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 0.15em;
+    background-color: rgb(255, 151, 54);
+    opacity: 0;
+    transition: opacity 300ms, transform 300ms;
+}
+
+.footer > a:hover::after {
+  opacity: 1;
+  transform: translate3d(0, 0.3em, 0);
+}
