--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -100,7 +100,7 @@
 
 .shop-button:hover {
     color: white;
-    background: rgb(255, 151, 54);;
+    background: rgb(255, 151, 54);
     box-shadow: 5px 5px 0 0 white;
     transition: .5s;
 }
@@ -109,4 +109,27 @@
     display: flex;
     flex-direction: column;
     flex-grow: 1;
+}
+
+.header > h1 > a,
+nav > a {
+    position: relative;
+}
+.header > h1 > a::after,
+nav > a::after {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 0.15em;
+    background-color: rgb(255, 151, 54);
+    opacity: 0;
+    transition: opacity 300ms, transform 300ms;
+}
+
+.header > h1 > a:hover::after,
+nav > a:hover::after {
+  opacity: 1;
+  transform: translate3d(0, 0.25em, 0);
 }
