--- a/src/styles/cart-page.css
+++ b/src/styles/cart-page.css
@@ -26,7 +26,7 @@
     box-shadow: 0 0 30px 10px rgb(206, 206, 206);
 }
 
-.empty-box > button {
+.empty-box > a > button {
     height: 3rem;
     width: 15rem;
     font-size: 1.75rem;
@@ -38,7 +38,9 @@
     opacity: 0.7;
 }
 
-.empty-box > button:hover {
+.empty-box > a > button:hover {
     opacity: 1;
     transition: .5s;
 }
+
+/* Non-Empty Cart */
