--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -29,7 +29,7 @@ a {
 
 .material-symbols-outlined {
   font-variation-settings:
-  'FILL' 0,
+  'FILL' 1,
   'wght' 400,
   'GRAD' 0,
   'opsz' 48;
@@ -42,5 +42,45 @@ a {
 }
 
 .cart-count {
-    font-size: 1.25rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-right: 1rem;
+    margin-bottom: 1rem;
+    font-size: 1.125rem;
+    border-radius: 10px;
+    height: 1.65rem;
+    width: 1.65rem;
+    background-color: rgb(255, 136, 0);;
+    text-align: center;
 }
+
+.header > h1 > a,
+nav > a {
+    position: relative;
+}
+
+
+.header > h1 > a::after,
+nav > a::after {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 0.15em;
+    background-color: rgb(255, 136, 0); 
+    opacity: 0;
+    transition: opacity 300ms, transform 300ms;
+}
+
+.header > h1 > a:hover::after,
+nav > .cart:hover::after {
+  opacity: 1;
+  transform: translate3d(0, 0.25em, 0);
+}
+
+nav > .hov:hover::after {
+    opacity: 1;
+    transform: translate3d(0, 0.6em, 0);
+  }
