--- a/src/styles/cart-page.css
+++ b/src/styles/cart-page.css
@@ -22,7 +22,7 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    gap: 2rem;
+    gap: 1.75rem;
     box-shadow: 0 0 30px 10px rgb(206, 206, 206);
 }
 
@@ -44,3 +44,66 @@
 }
 
 /* Non-Empty Cart */
+
+.nonempty-cart-page {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 2rem;
+}
+
+.nonempty-cart-page > h1 {
+    font-weight: 100;
+    font-size: 1.75rem;
+}
+
+.cart-items {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 2rem;
+}
+
+.cart-item-holder {
+    background-color: white;
+    box-shadow: 0 0 20px 10px rgb(206, 206, 206);
+
+}
+
+.cart-item {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 2.5rem;
+    background-color: white;
+    padding: 1.5rem;
+    width: 100%;
+}
+
+.cart-item > img {
+    height: 150px;
+    width: 150px;
+    background-color: rgb(239, 239, 239);
+}
+
+.cart-item-details {
+    display: flex;
+    flex-direction: column;
+    gap: 0.75rem;
+    width: 25%;
+}
+
+.cart-item-details > h3 {
+    font-weight: 400;
+}
+
+.remove-item {
+    border-radius: 5px;
+    transition: 0.5s;
+}
+
+.remove-item:hover {
+    transition: 0.5s;
+    background-color: black;
+    color: white;
+}
