--- a/src/styles/cart-page.css
+++ b/src/styles/cart-page.css
@@ -166,3 +166,10 @@
     opacity: 1;
     transition: 0.5s;
 }
+
+.credit-logo {
+    padding-top: 1rem;
+    width: 250px;
+    align-self: flex-start;
+    padding-left: 1.5rem;
+}
