--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -4,6 +4,7 @@
   text-align: center;
   background-color: rgb(224, 227, 229);
   z-index: 1;
+  letter-spacing: 2px;
   }
   
 .footer > a {
@@ -11,10 +12,7 @@
   text-decoration: none;
   font-weight: 100;
   font-size: 1.25rem;
-}
-
-.footer > a {
-    position: relative;
+  position: relative;
 }
 
 .footer > a::after {
