--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -4,7 +4,7 @@ a {
 }
 
 .header {
-    padding: 1rem 1.5rem;
+    padding: 1rem 1rem;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -15,7 +15,7 @@ a {
 }
 
 .header > h1 {
-    font-size: 3rem;
+    font-size: 2.5rem;
     font-weight: 300;
     letter-spacing: 5px;
 }
@@ -23,7 +23,7 @@ a {
 .header > nav {
     display: flex;
     gap: 1.5rem;
-    font-size: 1.5rem;
+    font-size: 1.25rem;
     align-items: center;
 }
 
@@ -39,6 +39,7 @@ a {
     display: flex;
     align-items: center;
     justify-content: center;
+    margin-bottom: .3rem;
 }
 
 .cart-count {
@@ -48,8 +49,8 @@ a {
     margin-bottom: 1rem;
     font-size: 1.125rem;
     border-radius: 10px;
-    height: 1.65rem;
-    width: 1.65rem;
+    height: 1.35rem;
+    width: 1.35rem;
     background-color: rgb(255, 136, 0);;
     text-align: center;
 }
