--- a/src/styles/shop.css
+++ b/src/styles/shop.css
@@ -1,6 +1,6 @@
 .img {
-    height: 300px;
-    width: 300px;
+    height: 250px;
+    width: 250px;
 }
 
 .nav {
@@ -11,7 +11,7 @@
 
 .category {
     padding: .5rem 1rem;
-    font-size: 1rem;
+    font-size: .90rem;
     background-color: rgb(245, 210, 170);
     cursor: pointer;
     position: relative;
@@ -27,12 +27,12 @@
 }
 
 .catalog {
-    padding: 3rem 15rem 3rem;
+    padding: 3rem 10rem 3rem;
     display: grid;
     justify-items: center;
     align-content: center;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 3.5rem;
+    grid-template-columns: repeat(auto-fit, minmax(275px, 1fr));
+    gap: 1.5rem;
 }
 
 h3 {
@@ -47,7 +47,7 @@ h3 {
 .item {
     display: flex;
     flex-direction: column;
-    width: 300px;
+    width: 250px;
     align-items: center;
     justify-content: center;
     transform: scale(1.05);
@@ -63,8 +63,8 @@ h3 {
     background-color: rgb(239, 239, 239);
     transition: .5s;
     cursor: pointer;
-    height: 200px;
-    width: 200px;
+    height: 250px;
+    width: 250px;
 }
 
 .item-info > h3 {
@@ -74,7 +74,7 @@ h3 {
 
 .item-info {
     padding: 1rem;
-    width: 200px;
+    width: 250px;
     text-align: center;
 }
 
