--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -47,10 +47,10 @@ a {
     align-items: center;
     justify-content: center;
     margin-bottom: 1rem;
-    font-size: 1.125rem;
+    font-size: .95rem;
     border-radius: 10px;
-    height: 1.35rem;
-    width: 1.35rem;
+    height: 1.45rem;
+    width: 1.45rem;
     background-color: rgb(255, 136, 0);;
     text-align: center;
 }
