--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -76,11 +76,25 @@ nav > a::after {
 
 .header > h1 > a:hover::after,
 nav > .cart:hover::after {
-  opacity: 1;
-  transform: translate3d(0, 0.25em, 0);
+    opacity: 1;
+    transform: translate3d(0, 0.25em, 0);
 }
 
 nav > .hov:hover::after {
     opacity: 1;
     transform: translate3d(0, 0.6em, 0);
+}
+
+@media (max-width: 500px) {
+    .header > h1 {
+        font-size: 2rem;
+    }
+    
+    .header > nav > a {
+        font-size: 1.25rem;
+    }
+
+    .header > nav {
+        gap: .75rem;
+    }
 }
