--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -8,8 +8,6 @@
 
 .section1 {
     display: flex;
-    flex-direction: column;
-    align-items: center;
     justify-content: center;
 }
 
@@ -111,4 +109,33 @@
     display: flex;
     flex-direction: column;
     flex-grow: 1;
+}
+
+/* Media Queries */
+
+@media (max-width: 500px) {
+    .section1 {
+        align-items: center;
+    }
+
+    .section1 > img {
+        height: 300px;
+    }
+    
+    .hero-text {
+        margin-top: 0;
+        padding: 3.5rem 0 0;
+        align-items: center;
+        gap: .75rem;
+        width: auto;   
+        text-align: center;
+    }
+
+    .hero-text > h1 {
+        font-size: 1.5rem;
+    }
+
+    .section2 > h1 {
+        font-size: 1.25rem;
+    }
 }
