--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -124,10 +124,10 @@
     
     .hero-text {
         margin-top: 0;
-        padding: 3.5rem 0 0;
+        padding: 3.5rem 0 0 0;
         align-items: center;
         gap: .75rem;
-        width: auto;   
+        width: 300px;   
         text-align: center;
     }
 
