--- a/src/styles/shop.css
+++ b/src/styles/shop.css
@@ -82,3 +82,14 @@ h3 {
     transform: scale(1);
     transition: .5s;
 }
+
+@media (max-width: 500px) {
+    .nav {
+        padding: 0;
+        justify-content: center;
+    }
+
+    .catalog {
+        padding: 2.5rem 0;
+    }
+}
